--- a/index.html
+++ b/index.html
@@ -495,9 +495,14 @@
 <script src="./Js/jquery-3.3.1.js"></script>
 <script src="./js/menu.js"></script>
 <script src="js/app.js"></script>
+<script src="js/Carousel.js"></script>
+<script src="js/typed.js"></script>
+<script src="js/waypoints.js"></script>
+
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script> -->
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script> -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
 
 <script src="./Js/main2.js"></script>
