--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <!-- Estilos -->
     <link rel="stylesheet" href="css/estilosflex.css">
+    <link rel="stylesheet" href="css/owlCarousel.css">
     <!-- <link rel="stylesheet" href="css/estilos.css"> -->
     <!-- <link rel="stylesheet" href="css/style.css"> -->
 
@@ -122,7 +123,7 @@
                     <br><p>Admiro a los jugadores por sus capacidades y habilidades, y a los couch por las estrategias que realizan para ganar un juego. </p>
                     <br><p>Considero que puedo ser un couch en el ambito laboral, me gusta trabajar en equipo soy muy metodico, me gusta ganar y resolver problemas con éxito.</p>
                     <br><p>Me apasiona la tecnología, me sorprenden cada dia las personas emprendedoras e innovadoras y que buscan soluciones para todos los ambitos y todas las etapas de la vida. </p>
-                    <br><br><a href="./cv/Curriculum_Carlos_Valencia_2021.docx">Descarga mi CV</a>   
+                    <br><br><a href="./cv/Curriculum_Carlos_Valencia_2021.docx" download="CV_carlos_Valencia">Descarga mi CV</a>   
                 </div>
             </div> 
         </div>
@@ -498,7 +499,7 @@
 <script src="js/Carousel.js"></script>
 <script src="js/typed.js"></script>
 <script src="js/waypoints.js"></script>
-<script src="js/owlCarousel.js"></script>
+
 
     
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script> -->
